POS tagging e filtro dataset

--- a/SA_and_TextGen_on_EDOS.ipynb
+++ b/SA_and_TextGen_on_EDOS.ipynb
@@ -32,7 +32,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": 3,
       "id": "d19243d1-9a72-4d70-a0ac-72054e3c4bc3",
       "metadata": {
         "id": "d19243d1-9a72-4d70-a0ac-72054e3c4bc3"
@@ -80,7 +80,7 @@
         "id": "AuJdLlLVTVs9"
       },
       "id": "AuJdLlLVTVs9",
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -95,7 +95,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 6,
+      "execution_count": 4,
       "id": "44a6e0d3-bc28-4ea1-8ffb-aae536515a53",
       "metadata": {
         "id": "44a6e0d3-bc28-4ea1-8ffb-aae536515a53"
@@ -130,7 +130,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 7,
+      "execution_count": 5,
       "id": "f0a21112-c0f5-42c8-88df-86a518380847",
       "metadata": {
         "id": "f0a21112-c0f5-42c8-88df-86a518380847"
@@ -142,7 +142,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 8,
+      "execution_count": null,
       "id": "1abc4089-56a5-4cb6-be49-9dc69a6139c1",
       "metadata": {
         "id": "1abc4089-56a5-4cb6-be49-9dc69a6139c1",
@@ -177,7 +177,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 6,
+      "execution_count": null,
       "id": "402417f7-acab-41fc-adcf-5661d075773b",
       "metadata": {
         "id": "402417f7-acab-41fc-adcf-5661d075773b",
@@ -367,7 +367,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 7,
+      "execution_count": null,
       "id": "727417ea-754c-450c-8a7a-6590bbd7085d",
       "metadata": {
         "id": "727417ea-754c-450c-8a7a-6590bbd7085d",
@@ -394,7 +394,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 8,
+      "execution_count": null,
       "id": "b9ab2bb0-4174-4776-af17-faed9e3f89ab",
       "metadata": {
         "id": "b9ab2bb0-4174-4776-af17-faed9e3f89ab"
@@ -412,7 +412,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 9,
+      "execution_count": null,
       "id": "f5a21ae0-ca0c-4433-838d-04eb231d8daf",
       "metadata": {
         "id": "f5a21ae0-ca0c-4433-838d-04eb231d8daf",
@@ -505,7 +505,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 10,
+      "execution_count": null,
       "id": "b5afc920-4ef2-4807-bed0-9e43fa9e519d",
       "metadata": {
         "id": "b5afc920-4ef2-4807-bed0-9e43fa9e519d",
@@ -539,7 +539,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 9,
+      "execution_count": null,
       "id": "246784a3-ee6c-4583-9e78-a2e3c94bddf6",
       "metadata": {
         "id": "246784a3-ee6c-4583-9e78-a2e3c94bddf6",
@@ -594,7 +594,7 @@
         "outputId": "6cedc69d-945c-4b05-e46d-9b918fa163f9"
       },
       "id": "ZlGvQw03L6W3",
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -610,7 +610,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 13,
+      "execution_count": null,
       "id": "b247feea-4c20-4750-9a72-d3fb98386955",
       "metadata": {
         "id": "b247feea-4c20-4750-9a72-d3fb98386955",
@@ -690,7 +690,7 @@
         "outputId": "7368dd05-6d6f-4211-d2eb-f367f29946ce"
       },
       "id": "Dwd3OCowSa1Z",
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -719,7 +719,7 @@
         "outputId": "ade8578a-0506-4e02-8e49-d02696a8ee23"
       },
       "id": "SLz-fbU3l-zu",
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -747,7 +747,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 16,
+      "execution_count": null,
       "id": "f487e90b-6e05-417c-9631-7ecc6633a75b",
       "metadata": {
         "id": "f487e90b-6e05-417c-9631-7ecc6633a75b",
@@ -775,6 +775,216 @@
       "source": [
         "df[(df['uttr'].str.len() > 300)]['uttr'].iloc[0]"
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## POS tagging"
+      ],
+      "metadata": {
+        "id": "ou46NngAWo2-"
+      },
+      "id": "ou46NngAWo2-"
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "from pandas.core.common import flatten\n",
+        "X = df['uttr']\n",
+        "Y = df['eb+_emot']"
+      ],
+      "metadata": {
+        "id": "xCTBfjsBWsQO"
+      },
+      "id": "xCTBfjsBWsQO",
+      "execution_count": 6,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Since the dataset is strongly unbalanced towards the \"questioning\" label, we keep onlu 200k samples from this label, chosen at random"
+      ],
+      "metadata": {
+        "id": "ygnw1QHAXI-X"
+      },
+      "id": "ygnw1QHAXI-X"
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "from sklearn.utils import resample\n",
+        "import numpy as np\n",
+        "\n",
+        "quest = X[Y==\"questioning\"]\n",
+        "quest = resample(quest, n_samples=200000, random_state=42)\n",
+        "X_ds = pd.concat([X[Y!=\"questioning\"],quest], ignore_index=True)\n",
+        "Y_ds = pd.concat([Y[Y!=\"questioning\"], pd.DataFrame([\"questioning\"]*200000)], ignore_index=True)"
+      ],
+      "metadata": {
+        "id": "Tj7UmapIWvXD"
+      },
+      "id": "Tj7UmapIWvXD",
+      "execution_count": 13,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "This snippet applies tokenization to the reduced dataset, and then POS tagging. Now we can find the tokens that are tagged as NNP (proper noun) and remove them from our sentences."
+      ],
+      "metadata": {
+        "id": "D6c8Jz_rcJxf"
+      },
+      "id": "D6c8Jz_rcJxf"
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import spacy\n",
+        "import en_core_web_sm\n",
+        "nlp_model = en_core_web_sm.load()"
+      ],
+      "metadata": {
+        "id": "6N5GM2oXWvLg"
+      },
+      "id": "6N5GM2oXWvLg",
+      "execution_count": 8,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import nltk\n",
+        "from nltk.tokenize import word_tokenize\n",
+        "nltk.download('averaged_perceptron_tagger')\n",
+        "nltk.download('punkt')\n",
+        "\n",
+        "# function to apply POS tagging to a document\n",
+        "def pos_tagging(document):\n",
+        "    tokens = word_tokenize(document)\n",
+        "    pos_tags = nltk.pos_tag(tokens)\n",
+        "    return pos_tags\n",
+        "\n",
+        "# apply POS tagging to a pandas Data Series of documents\n",
+        "pos_tags_X_ds = X_ds.apply(pos_tagging)\n"
+      ],
+      "metadata": {
+        "id": "aIGMK2pcXsMN",
+        "outputId": "8dd47527-0738-4bba-fb62-ef45de9229da",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "id": "aIGMK2pcXsMN",
+      "execution_count": 14,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stderr",
+          "text": [
+            "[nltk_data] Downloading package averaged_perceptron_tagger to\n",
+            "[nltk_data]     /root/nltk_data...\n",
+            "[nltk_data]   Package averaged_perceptron_tagger is already up-to-\n",
+            "[nltk_data]       date!\n",
+            "[nltk_data] Downloading package punkt to /root/nltk_data...\n",
+            "[nltk_data]   Package punkt is already up-to-date!\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# function to filter out proper nouns from a list of (token, POS tag) tuples\n",
+        "def filter_proper_nouns(tagged_tokens):\n",
+        "    return [token_tag for token_tag in tagged_tokens if not token_tag[1].startswith('NNP')]\n",
+        "\n",
+        "# apply the filter_proper_nouns() function to each POS-tagged document \n",
+        "filtered_pos_tags_X_ds = pos_tags_X_ds.apply(filter_proper_nouns)\n"
+      ],
+      "metadata": {
+        "id": "750hxjOSaTp7"
+      },
+      "id": "750hxjOSaTp7",
+      "execution_count": 19,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# function to rebuild a sentence from a list of (token, POS tag) tuples\n",
+        "def rebuild_sentence(tagged_tokens):\n",
+        "    return ' '.join([token_tag[0] for token_tag in tagged_tokens])\n",
+        "\n",
+        "# rebuild sentences using filtered_pos_tags_series\n",
+        "filtered_X_ds = filtered_pos_tags_X_ds.apply(rebuild_sentence)\n"
+      ],
+      "metadata": {
+        "id": "caKH0gHrc9Cr"
+      },
+      "id": "caKH0gHrc9Cr",
+      "execution_count": 22,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "sentences = filtered_X_ds.tolist()\n",
+        "labels = np.asarray(Y_ds).tolist()\n",
+        "\n",
+        "# remove sentences with less than 2 words and with punctuation only\n",
+        "sentences = [sentence for sentence in sentences if len(sentence.split()) >= 2 and re.sub(r'[^\\w\\s]', '', sentence).strip() != '']\n",
+        "labels = [label for label, sentence in zip(labels, filtered_X_ds) if len(sentence.split()) >= 2 and re.sub(r'[^\\w\\s]', '', sentence).strip() != '']"
+      ],
+      "metadata": {
+        "id": "pLziF7GjkErT"
+      },
+      "id": "pLziF7GjkErT",
+      "execution_count": 34,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Saving to not repeat the enormous work..."
+      ],
+      "metadata": {
+        "id": "0cCGDeTJm38b"
+      },
+      "id": "0cCGDeTJm38b"
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "lab = []\n",
+        "for l in labels:\n",
+        "  lab.append(l[0])\n",
+        "\n",
+        "labels = lab"
+      ],
+      "metadata": {
+        "id": "VwJHzfwEn9J8"
+      },
+      "id": "VwJHzfwEn9J8",
+      "execution_count": 52,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "with open('filtered_sentences.txt','w') as f:\n",
+        "  f.write('\\n'.join(list(sentences)))\n",
+        "\n",
+        "with open('filtered_labels.txt','w') as g:\n",
+        "  g.write('\\n'.join(list(labels)))"
+      ],
+      "metadata": {
+        "id": "USID-Vdkmt4b"
+      },
+      "id": "USID-Vdkmt4b",
+      "execution_count": 53,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -819,7 +1029,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 13,
+      "execution_count": null,
       "id": "6aaf8394-b11d-4e49-b10d-c63098c85750",
       "metadata": {
         "id": "6aaf8394-b11d-4e49-b10d-c63098c85750"
@@ -852,12 +1062,12 @@
         "id": "APlyUl_s02bs"
       },
       "id": "APlyUl_s02bs",
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "code",
-      "execution_count": 11,
+      "execution_count": null,
       "id": "2f2bc0f3-6802-4f9d-b14f-818852923598",
       "metadata": {
         "id": "2f2bc0f3-6802-4f9d-b14f-818852923598"
@@ -875,7 +1085,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 14,
+      "execution_count": null,
       "id": "84e6c6fc-f1da-4a18-87a7-9ee35246bddf",
       "metadata": {
         "id": "84e6c6fc-f1da-4a18-87a7-9ee35246bddf"
@@ -887,7 +1097,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 15,
+      "execution_count": null,
       "id": "c84b52c8-b793-45b6-8066-1010d9bfca0f",
       "metadata": {
         "id": "c84b52c8-b793-45b6-8066-1010d9bfca0f",
@@ -926,7 +1136,7 @@
         "outputId": "b9557de2-0a5f-43ef-8e0d-c1d5ec9fc8cb"
       },
       "id": "s7F1bc1a2-EB",
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -950,7 +1160,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 47,
+      "execution_count": null,
       "id": "46e8ac59-9de7-46c2-bd63-efd666bbfe6b",
       "metadata": {
         "id": "46e8ac59-9de7-46c2-bd63-efd666bbfe6b"
@@ -962,7 +1172,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 61,
+      "execution_count": null,
       "id": "13e73866-662d-4144-ad3e-f7053f19077b",
       "metadata": {
         "tags": [],
@@ -999,7 +1209,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 65,
+      "execution_count": null,
       "id": "01ea9adf-fb05-4ef9-9be4-16b476d520f9",
       "metadata": {
         "id": "01ea9adf-fb05-4ef9-9be4-16b476d520f9",
@@ -1081,7 +1291,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 66,
+      "execution_count": null,
       "id": "bcd95195-b719-4b24-9fe5-375be1392e0f",
       "metadata": {
         "id": "bcd95195-b719-4b24-9fe5-375be1392e0f",
@@ -1151,7 +1361,7 @@
         "id": "CSsQRXS-e_gd"
       },
       "id": "CSsQRXS-e_gd",
-      "execution_count": 35,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1164,7 +1374,7 @@
         "id": "fk3UhvcGfuj7"
       },
       "id": "fk3UhvcGfuj7",
-      "execution_count": 41,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1180,7 +1390,7 @@
         "outputId": "0e5c8f3b-e882-4b8c-848e-e3a333ad69d7"
       },
       "id": "VM4RPpPq-IXi",
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1202,7 +1412,7 @@
         "id": "IpTspK5OgbAa"
       },
       "id": "IpTspK5OgbAa",
-      "execution_count": 48,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1221,7 +1431,7 @@
         "outputId": "2ae1a0ab-2b9a-4a7f-caa9-e3ce843a3aaf"
       },
       "id": "vQv1wAuY9ww3",
-      "execution_count": 49,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1285,7 +1495,7 @@
         "outputId": "3c78d764-1c95-4fbb-e8e2-461434952119"
       },
       "id": "Am74df28lyui",
-      "execution_count": 60,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
