Small fixes to the text

--- a/SA and TextGen on EDOS.ipynb
+++ b/SA and TextGen on EDOS.ipynb
@@ -578,14 +578,14 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 16,
       "id": "727417ea-754c-450c-8a7a-6590bbd7085d",
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "727417ea-754c-450c-8a7a-6590bbd7085d",
-        "outputId": "55a4d6a4-cfaa-4848-f9ed-89700c3bb2db"
+        "outputId": "acf4d727-dc9e-480e-80be-edb7a86c0e35"
       },
       "outputs": [
         {
@@ -594,7 +594,7 @@
               "0"
             ]
           },
-          "execution_count": 13,
+          "execution_count": 16,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -605,7 +605,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 17,
       "id": "b9ab2bb0-4174-4776-af17-faed9e3f89ab",
       "metadata": {
         "id": "b9ab2bb0-4174-4776-af17-faed9e3f89ab"
@@ -623,25 +623,25 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 18,
       "id": "f5a21ae0-ca0c-4433-838d-04eb231d8daf",
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "f5a21ae0-ca0c-4433-838d-04eb231d8daf",
-        "outputId": "671878ef-0d6f-4472-cf4c-ddfd17554dc0"
+        "outputId": "a63270ed-36f0-4187-c24d-d1f2608b73f7"
       },
       "outputs": [
         {
+          "output_type": "execute_result",
           "data": {
             "text/plain": [
               "2829426"
             ]
           },
-          "execution_count": 15,
           "metadata": {},
-          "output_type": "execute_result"
+          "execution_count": 18
         }
       ],
       "source": [
@@ -671,7 +671,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 19,
       "id": "2VsKyigWxfmS",
       "metadata": {
         "id": "2VsKyigWxfmS"
@@ -1909,6 +1909,7 @@
       },
       "outputs": [],
       "source": [
+        "texts_df = pd.read_csv(csv_path_preprocessed_texts) # this is the other preprocessed dataset we are using (first preprocessing step)\n",
         "tokens_df = pd.read_csv(csv_path_preprocessed_tokens) # this is the preprocessed dataset we are using (tokenization and stop words removal)"
       ]
     },
@@ -1923,19 +1924,6 @@
       "source": [
         "emotions = tokens_df['eb+_emot'].unique()\n",
         "n_topics = len(emotions)"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "id": "CM4NqtT74I_8",
-      "metadata": {
-        "id": "CM4NqtT74I_8"
-      },
-      "outputs": [],
-      "source": [
-        "min_doc_freq = 120\n",
-        "max_doc_freq = 0.7"
       ]
     },
     {
@@ -1980,7 +1968,20 @@
       "source": [
         "We will remove numbers since they don't represent any meaningful information in our semantical context and they only enlarge TF-IDF vectors slowing down training and preprocessing steps.\n",
         "\n",
-        "We will remove numbers and stopwords from the corpus, plus words appearing in less than 10 documents or in more than the 80% of the collection (to remove corpus-specific stopwords)."
+        "We will remove numbers and stopwords from the corpus, plus words appearing in less than 120 documents or in more than the 70% of the collection (to remove corpus-specific stopwords)."
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "id": "CM4NqtT74I_8",
+      "metadata": {
+        "id": "CM4NqtT74I_8"
+      },
+      "outputs": [],
+      "source": [
+        "min_doc_freq = 120\n",
+        "max_doc_freq = 0.7"
       ]
     },
     {
