corretto word2vec tokens_df

--- a/SA and TextGen on EDOS.ipynb
+++ b/SA and TextGen on EDOS.ipynb
@@ -46,7 +46,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 34,
+      "execution_count": 3,
       "id": "d19243d1-9a72-4d70-a0ac-72054e3c4bc3",
       "metadata": {
         "id": "d19243d1-9a72-4d70-a0ac-72054e3c4bc3"
@@ -60,7 +60,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": null,
       "id": "jRudjrwPN3mq",
       "metadata": {
         "id": "jRudjrwPN3mq"
@@ -88,7 +88,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": null,
       "id": "KtLmNWEYN6s7",
       "metadata": {
         "id": "KtLmNWEYN6s7",
@@ -124,7 +124,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": null,
       "id": "bo0bPNMXOBMh",
       "metadata": {
         "id": "bo0bPNMXOBMh"
@@ -155,40 +155,15 @@
         "import fasttext"
       ],
       "metadata": {
-        "id": "dWEXC4vKQ8qa",
-        "outputId": "1910236f-845c-413e-e2d2-176b01091d22",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        }
+        "id": "dWEXC4vKQ8qa"
       },
       "id": "dWEXC4vKQ8qa",
-      "execution_count": 35,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "\u001b[?25l     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m0.0/68.8 kB\u001b[0m \u001b[31m?\u001b[0m eta \u001b[36m-:--:--\u001b[0m\r\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m68.8/68.8 kB\u001b[0m \u001b[31m2.3 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
-            "\u001b[?25h  Preparing metadata (setup.py) ... \u001b[?25l\u001b[?25hdone\n",
-            "  Building wheel for fasttext (setup.py) ... \u001b[?25l\u001b[?25hdone\n",
-            "--2023-05-16 11:23:30--  http://dl.fbaipublicfiles.com/fasttext/vectors-crawl/cc.en.300.bin.gz\n",
-            "Resolving dl.fbaipublicfiles.com (dl.fbaipublicfiles.com)... 108.157.162.35, 108.157.162.120, 108.157.162.83, ...\n",
-            "Connecting to dl.fbaipublicfiles.com (dl.fbaipublicfiles.com)|108.157.162.35|:80... connected.\n",
-            "HTTP request sent, awaiting response... 200 OK\n",
-            "Length: 4503593528 (4.2G) [application/octet-stream]\n",
-            "Saving to: ‘cc.en.300.bin.gz’\n",
-            "\n",
-            "cc.en.300.bin.gz    100%[===================>]   4.19G  17.1MB/s    in 71s     \n",
-            "\n",
-            "2023-05-16 11:24:42 (60.5 MB/s) - ‘cc.en.300.bin.gz’ saved [4503593528/4503593528]\n",
-            "\n"
-          ]
-        }
-      ]
+      "execution_count": 10,
+      "outputs": []
     },
     {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": null,
       "id": "85b7cd6e-aa65-4f53-8738-dbcf7e6e0942",
       "metadata": {
         "id": "85b7cd6e-aa65-4f53-8738-dbcf7e6e0942"
@@ -201,7 +176,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 6,
+      "execution_count": null,
       "id": "c1f22508-c2ec-43b5-85e8-cdce33859ac4",
       "metadata": {
         "tags": [],
@@ -253,7 +228,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 7,
+      "execution_count": null,
       "id": "ff7441d7-302f-43a0-8cfa-d438f2ca9720",
       "metadata": {
         "id": "ff7441d7-302f-43a0-8cfa-d438f2ca9720",
@@ -291,7 +266,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 32,
+      "execution_count": null,
       "id": "sfaFWuKBOEPT",
       "metadata": {
         "id": "sfaFWuKBOEPT"
@@ -323,7 +298,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 9,
+      "execution_count": null,
       "id": "AuJdLlLVTVs9",
       "metadata": {
         "id": "AuJdLlLVTVs9"
@@ -408,7 +383,7 @@
         "id": "TUpnp8XAYhsS",
         "outputId": "971c7583-f1eb-4210-d392-f71e0db6c9f5"
       },
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -445,7 +420,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 19,
+      "execution_count": 1,
       "id": "44a6e0d3-bc28-4ea1-8ffb-aae536515a53",
       "metadata": {
         "id": "44a6e0d3-bc28-4ea1-8ffb-aae536515a53"
@@ -471,7 +446,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 20,
+      "execution_count": 4,
       "metadata": {
         "id": "f0a21112-c0f5-42c8-88df-86a518380847"
       },
@@ -493,7 +468,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 21,
+      "execution_count": 5,
       "id": "2VsKyigWxfmS",
       "metadata": {
         "id": "2VsKyigWxfmS"
@@ -524,7 +499,7 @@
         "id": "0u86jS3D4NBt"
       },
       "id": "0u86jS3D4NBt",
-      "execution_count": 22,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -5459,7 +5434,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 23,
+      "execution_count": null,
       "id": "HMHlOTN4NKXp",
       "metadata": {
         "id": "HMHlOTN4NKXp"
@@ -6766,7 +6741,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 24,
+      "execution_count": null,
       "id": "Y8G_L425nA5z",
       "metadata": {
         "id": "Y8G_L425nA5z",
@@ -6814,7 +6789,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 25,
+      "execution_count": null,
       "id": "yhMI0BtJQJ1Y",
       "metadata": {
         "id": "yhMI0BtJQJ1Y"
@@ -6837,7 +6812,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 28,
+      "execution_count": null,
       "id": "t2Yyhh0qQJnk",
       "metadata": {
         "id": "t2Yyhh0qQJnk"
@@ -6851,7 +6826,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 29,
+      "execution_count": null,
       "id": "N1efWXK-QJf6",
       "metadata": {
         "id": "N1efWXK-QJf6",
@@ -6895,12 +6870,12 @@
         "id": "RhXPAHCkVXLu"
       },
       "id": "RhXPAHCkVXLu",
-      "execution_count": 30,
+      "execution_count": 12,
       "outputs": []
     },
     {
       "cell_type": "code",
-      "execution_count": 31,
+      "execution_count": null,
       "id": "lTj6fcadQJSO",
       "metadata": {
         "id": "lTj6fcadQJSO",
@@ -6943,7 +6918,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 36,
+      "execution_count": null,
       "id": "SUDUk0q1Qb8v",
       "metadata": {
         "id": "SUDUk0q1Qb8v",
@@ -6974,7 +6949,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 37,
+      "execution_count": null,
       "id": "UBdKtKmMQ4_r",
       "metadata": {
         "id": "UBdKtKmMQ4_r",
@@ -7067,7 +7042,7 @@
         }
       },
       "id": "ZVZvVS8AWlit",
-      "execution_count": 38,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -7089,7 +7064,10 @@
     {
       "cell_type": "code",
       "source": [
-        "w2v_model_prepreocessed_tokens = Word2Vec(sentences=tokens_df['filtered_tokens'],\n",
+        "sentences = tokens_df['filtered_tokens']\n",
+        "tokenized_sentences = sentences.apply(ast.literal_eval)  #we need this function to convert the tokens into the right format\n",
+        "\n",
+        "w2v_model_prepreocessed_tokens = Word2Vec(sentences=tokenized_sentences,\n",
         "                     window=8,\n",
         "                     vector_size=50)\n",
         "\n",
@@ -7101,41 +7079,27 @@
       ],
       "metadata": {
         "id": "w14BkwFkWlcr",
-        "outputId": "2a2c14be-18ea-4213-e57a-4156aafef9fd",
+        "outputId": "9138699d-bda0-4b38-b108-2628c6fafb81",
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 414
+          "base_uri": "https://localhost:8080/"
         }
       },
       "id": "w14BkwFkWlcr",
-      "execution_count": 40,
+      "execution_count": 13,
       "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stderr",
-          "text": [
-            "WARNING:gensim.models.word2vec:Each 'sentences' item should be a list of words (usually unicode strings). First item here is instead plain <class 'str'>.\n"
-          ]
-        },
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Number of learned vectors: 31\n",
-            "Term: medicine\n"
-          ]
-        },
-        {
-          "output_type": "error",
-          "ename": "KeyError",
-          "evalue": "ignored",
-          "traceback": [
-            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-            "\u001b[0;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
-            "\u001b[0;32m<ipython-input-40-a7860d4f5e55>\u001b[0m in \u001b[0;36m<cell line: 7>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      7\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0mterm\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mterms\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      8\u001b[0m   \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"Term: {t}\"\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mformat\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mt\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mterm\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 9\u001b[0;31m   \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mw2v_model_prepreocessed_tokens\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mwv\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mmost_similar\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mterm\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-            "\u001b[0;32m/usr/local/lib/python3.10/dist-packages/gensim/models/keyedvectors.py\u001b[0m in \u001b[0;36mmost_similar\u001b[0;34m(self, positive, negative, topn, clip_start, clip_end, restrict_vocab, indexer)\u001b[0m\n\u001b[1;32m    839\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    840\u001b[0m         \u001b[0;31m# compute the weighted average of all keys\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 841\u001b[0;31m         \u001b[0mmean\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mget_mean_vector\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mkeys\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mweight\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mpre_normalize\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;32mTrue\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mpost_normalize\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;32mTrue\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mignore_missing\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;32mFalse\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    842\u001b[0m         all_keys = [\n\u001b[1;32m    843\u001b[0m             \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mget_index\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mkey\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0mkey\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mkeys\u001b[0m \u001b[0;32mif\u001b[0m \u001b[0misinstance\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mkey\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0m_KEY_TYPES\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;32mand\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mhas_index_for\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mkey\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;32m/usr/local/lib/python3.10/dist-packages/gensim/models/keyedvectors.py\u001b[0m in \u001b[0;36mget_mean_vector\u001b[0;34m(self, keys, weights, pre_normalize, post_normalize, ignore_missing)\u001b[0m\n\u001b[1;32m    516\u001b[0m                 \u001b[0mtotal_weight\u001b[0m \u001b[0;34m+=\u001b[0m \u001b[0mabs\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mweights\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0midx\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    517\u001b[0m             \u001b[0;32melif\u001b[0m \u001b[0;32mnot\u001b[0m \u001b[0mignore_missing\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 518\u001b[0;31m                 \u001b[0;32mraise\u001b[0m \u001b[0mKeyError\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34mf\"Key '{key}' not present in vocabulary\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    519\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    520\u001b[0m         \u001b[0;32mif\u001b[0m \u001b[0mtotal_weight\u001b[0m \u001b[0;34m>\u001b[0m \u001b[0;36m0\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;31mKeyError\u001b[0m: \"Key 'medicine' not present in vocabulary\""
+            "Number of learned vectors: 22347\n",
+            "Term: medicine\n",
+            "[('coat', 0.8501386642456055), ('pill', 0.806948721408844), ('risks', 0.7993083000183105), ('pills', 0.7779584527015686), ('baths', 0.7763784527778625), ('chances', 0.7732659578323364), ('zig', 0.773192822933197), ('dough', 0.7688190937042236), ('brochures', 0.7687033414840698), ('medication', 0.7651132345199585)]\n",
+            "Term: wrong\n",
+            "[('happening', 0.7095080018043518), ('happened', 0.6883953213691711), ('else', 0.6668083667755127), ('happens', 0.637516438961029), ('happen', 0.6251413822174072), ('blame', 0.6042654514312744), ('except', 0.5935541987419128), ('weird', 0.5720314979553223), ('handle', 0.5558891296386719), ('nothing', 0.5512328147888184)]\n",
+            "Term: never\n",
+            "[('ever', 0.68794846534729), ('knew', 0.5819226503372192), ('senseless', 0.5432707071304321), ('thought', 0.5417728424072266), ('hardly', 0.5294370651245117), ('barely', 0.5267205238342285), ('clearly', 0.5252832770347595), ('finally', 0.519991397857666), ('yet', 0.5186439752578735), ('felt', 0.5178577899932861)]\n",
+            "Term: drink\n",
+            "[('eat', 0.8260526657104492), ('wine', 0.7345918416976929), ('tea', 0.7260746955871582), ('hungry', 0.708727240562439), ('beer', 0.704268217086792), ('toast', 0.6670923233032227), ('glass', 0.6332994103431702), ('breakfast', 0.622994601726532), ('champagne', 0.6184701323509216), ('coffee', 0.6147021055221558)]\n"
           ]
         }
       ]
